result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: neeha
spec:
  selector:
    app: result
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
