vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: neeha
spec:
  selector:
    app: vote
  ports:
     - protocol: TCP
       port: 80
       targetPort: 80
